idf_component_register(SRCS "QuadraticCalculator.cpp" "ExceptionMenu.cpp" "HistoryMenu.cpp" "HistoryManager.cpp" "CharacterListingMenu.cpp" "GCDLCMMenu.cpp" "main.cpp" "HD44780.c" "IO.cpp" "ESPIO.cpp" "Menu.cpp" "MenuSelector.cpp" "MainMenu.cpp" "BasicCalculatorMenu.cpp" "TextField.cpp" "MathSolver/Fraction.cpp" "MathSolver/Term.cpp" "MathSolver/Variable.cpp" "MathSolver/Expression.cpp" "MathSolver/ExpressionPair.cpp" "MathSolver/ExpressionReader.cpp" "MathSolver/EquationSystem.cpp"
                       INCLUDE_DIRS "." "./MathSolver")
